#58: Roles Endpoint add api.yml endpoints
