# src/main/java/io/refugeescode/hackboard/web/api/controller/ProjectRoleApi.java
@@ -1,0 +1,140 @@
+/**
+ * NOTE: This class is auto generated by the swagger code generator program (2.3.1).
+ * https://github.com/swagger-api/swagger-codegen
+ * Do not edit the class manually.
+ */
+package io.refugeescode.hackboard.web.api.controller;
+
+import io.refugeescode.hackboard.service.dto.ProjectRoleDto;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import io.swagger.annotations.*;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestHeader;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestMethod;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
+import org.springframework.web.multipart.MultipartFile;
+
+import javax.servlet.http.HttpServletRequest;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+import java.io.IOException;
+import java.util.List;
+import java.util.Optional;
+
+@Api(value = "projectRole", description = "the projectRole API")
+public interface ProjectRoleApi {
+
+    Logger log = LoggerFactory.getLogger(ProjectRoleApi.class);
+
+    default Optional<ObjectMapper> getObjectMapper() {
+        return Optional.empty();
+    }
+
+    default Optional<HttpServletRequest> getRequest() {
+        return Optional.empty();
+    }
+
+    default Optional<String> getAcceptHeader() {
+        return getRequest().map(r -> r.getHeader("Accept"));
+    }
+
+    @ApiOperation(value = "Add a new project role", nickname = "addProjectRole", notes = "", response = Boolean.class, tags={ "projectRole", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "successful operation", response = Boolean.class) })
+    @RequestMapping(value = "/projectRole",
+        produces = { "application/json" }, 
+        method = RequestMethod.POST)
+    default ResponseEntity<Boolean> addProjectRole(@ApiParam(value = "" ,required=true )  @Valid @RequestBody ProjectRoleDto project) {
+        if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
+            if (getAcceptHeader().get().contains("application/json")) {
+                try {
+                    return new ResponseEntity<>(getObjectMapper().get().readValue("true", Boolean.class), HttpStatus.NOT_IMPLEMENTED);
+                } catch (IOException e) {
+                    log.error("Couldn't serialize response for content type application/json", e);
+                    return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+                }
+            }
+        } else {
+            log.warn("ObjectMapper or HttpServletRequest not configured in default ProjectRoleApi interface so no example is generated");
+        }
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+    }
+
+
+    @ApiOperation(value = "Delete Project role", nickname = "deleteProjectRole", notes = "", response = Boolean.class, tags={ "projectRole", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "successful operation", response = Boolean.class) })
+    @RequestMapping(value = "/projectRole/{projecRoletId}",
+        produces = { "application/json" }, 
+        method = RequestMethod.DELETE)
+    default ResponseEntity<Boolean> deleteProjectRole(@ApiParam(value = "ID of project role",required=true) @PathVariable("projectId") Long projectId) {
+        if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
+            if (getAcceptHeader().get().contains("application/json")) {
+                try {
+                    return new ResponseEntity<>(getObjectMapper().get().readValue("true", Boolean.class), HttpStatus.NOT_IMPLEMENTED);
+                } catch (IOException e) {
+                    log.error("Couldn't serialize response for content type application/json", e);
+                    return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+                }
+            }
+        } else {
+            log.warn("ObjectMapper or HttpServletRequest not configured in default ProjectRoleApi interface so no example is generated");
+        }
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+    }
+
+
+    @ApiOperation(value = "List all /projectRole", nickname = "listprojectRoles", notes = "", response = ProjectRoleDto.class, responseContainer = "List", tags={ "project", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "successful operation", response = ProjectRoleDto.class, responseContainer = "List") })
+    @RequestMapping(value = "/projectRole",
+        produces = { "application/json" }, 
+        method = RequestMethod.GET)
+    default ResponseEntity<List<ProjectRoleDto>> listprojectRoles() {
+        if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
+            if (getAcceptHeader().get().contains("application/json")) {
+                try {
+                    return new ResponseEntity<>(getObjectMapper().get().readValue("[ {  \"RoleName\" : \"RoleName\",  \"color\" : \"color\",  \"id\" : 0}, {  \"RoleName\" : \"RoleName\",  \"color\" : \"color\",  \"id\" : 0} ]", List.class), HttpStatus.NOT_IMPLEMENTED);
+                } catch (IOException e) {
+                    log.error("Couldn't serialize response for content type application/json", e);
+                    return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+                }
+            }
+        } else {
+            log.warn("ObjectMapper or HttpServletRequest not configured in default ProjectRoleApi interface so no example is generated");
+        }
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+    }
+
+
+    @ApiOperation(value = "View Project Roles", nickname = "viewProjectRoles", notes = "", response = ProjectRoleDto.class, tags={ "projectRole", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "successful operation", response = ProjectRoleDto.class) })
+    @RequestMapping(value = "/projectRole/{projecRoletId}",
+        produces = { "application/json" }, 
+        method = RequestMethod.GET)
+    default ResponseEntity<ProjectRoleDto> viewProjectRoles(@ApiParam(value = "ID of project role",required=true) @PathVariable("projecRoletId") Long projecRoletId) {
+        if(getObjectMapper().isPresent() && getAcceptHeader().isPresent()) {
+            if (getAcceptHeader().get().contains("application/json")) {
+                try {
+                    return new ResponseEntity<>(getObjectMapper().get().readValue("{  \"RoleName\" : \"RoleName\",  \"color\" : \"color\",  \"id\" : 0}", ProjectRoleDto.class), HttpStatus.NOT_IMPLEMENTED);
+                } catch (IOException e) {
+                    log.error("Couldn't serialize response for content type application/json", e);
+                    return new ResponseEntity<>(HttpStatus.INTERNAL_SERVER_ERROR);
+                }
+            }
+        } else {
+            log.warn("ObjectMapper or HttpServletRequest not configured in default ProjectRoleApi interface so no example is generated");
+        }
+        return new ResponseEntity<>(HttpStatus.NOT_IMPLEMENTED);
+    }
+
+}
